--- a/autonat-dialing-addrs-concurrently/libp2p/utils/future.html
+++ b/autonat-dialing-addrs-concurrently/libp2p/utils/future.html
@@ -17,7 +17,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>libp2p/utils/heartbeat</title>
+<title>libp2p/utils/future</title>
 <link rel="stylesheet" type="text/css" href="../../nimdoc.out.css">
 
 <script type="text/javascript" src="../../dochack.js"></script>
@@ -69,7 +69,7 @@ window.addEventListener('DOMContentLoaded', main);
 <body>
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">libp2p/utils/heartbeat</h1>
+    <h1 class="title">libp2p/utils/future</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -197,11 +197,19 @@ window.addEventListener("DOMContentLoaded", main2);
 </script>
 <ul class="simple simple-toc" id="toc-list">
 <li>
-  <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
+  <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">heartbeat
-      <li><a class="reference" href="#heartbeat.t%2Cstring%2CDuration%2Cuntyped"
-    title="heartbeat(name: string; interval: Duration; body: untyped): untyped">heartbeat(name: string; interval: Duration; body: untyped): untyped</a></li>
+      <li><a class="reference" href="#AllFuturesFailedError"
+    title="AllFuturesFailedError = object of CatchableError">AllFuturesFailedError</a></li>
+
+  </ul>
+</li>
+<li>
+  <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
+  <ul class="simple simple-toc-section">
+      <ul class="simple nested-toc-section">anyCompleted
+      <li><a class="reference" href="#anyCompleted%2Cseq%5BFuture%5BT%5D%5D"
+    title="anyCompleted[T](futs: seq[Future[T]]): Future[Future[T]]">anyCompleted[T](futs: seq[Future[T]]): Future[Future[T]]</a></li>
 
   </ul>
 
@@ -212,26 +220,44 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </div>
   &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat-dialing-addrs-concurrently/libp2p/utils/heartbeat.nim#L1"
+href="https://github.com/status-im/nim-libp2p/tree/autonat-dialing-addrs-concurrently/libp2p/utils/future.nim#L1"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utils/heartbeat.nim#L1" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utils/future.nim#L1" class="link-seesrc" target="_blank" >Edit</a>
 
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
   <p class="module-desc"></p>
-  <div class="section" id="18">
-<h1><a class="toc-backref" href="#18">Templates</a></h1>
+  <div class="section" id="7">
+<h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
-<div id="heartbeat.t,string,Duration,untyped" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#heartbeat.t%2Cstring%2CDuration%2Cuntyped"><span class="Identifier">heartbeat</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">interval</span><span class="Other">:</span> <span class="Identifier">Duration</span><span class="Other">;</span> <span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<div id="AllFuturesFailedError" class="tohide">
+<dt><pre><a href="future.html#AllFuturesFailedError"><span class="Identifier">AllFuturesFailedError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">CatchableError</span></pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat-dialing-addrs-concurrently/libp2p/utils/heartbeat.nim#L20"
+href="https://github.com/status-im/nim-libp2p/tree/autonat-dialing-addrs-concurrently/libp2p/utils/future.nim#L18"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utils/heartbeat.nim#L20" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utils/future.nim#L18" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+
+</dl></div>
+<div class="section" id="12">
+<h1><a class="toc-backref" href="#12">Procs</a></h1>
+<dl class="item">
+<div id="anyCompleted,seq[Future[T]]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#anyCompleted%2Cseq%5BFuture%5BT%5D%5D"><span class="Identifier">anyCompleted</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">futs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">]</span> {.
+    <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+Returns a future that will complete with the first future that completes. If all futures fail or futs is empty, the returned future will fail with AllFuturesFailedError.
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/autonat-dialing-addrs-concurrently/libp2p/utils/future.nim#L20"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utils/future.nim#L20" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -245,7 +271,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-07 15:23:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-07 15:23:49 UTC</small>
       </div>
     </div>
   </div>
