--- a/unstable/libp2p/utility.html
+++ b/unstable/libp2p/utility.html
@@ -212,7 +212,12 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">public
+      <ul class="simple nested-toc-section">compilesOr
+      <li><a class="reference" href="#compilesOr.t%2Cuntyped%2Cuntyped"
+    title="compilesOr(a, b: untyped): untyped">compilesOr(a, b: untyped): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">public
       <li><a class="reference" href="#public.t"
     title="public()">public()</a></li>
 
@@ -242,9 +247,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L22"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L28"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -254,9 +259,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L34"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L40"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L34" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -265,6 +270,18 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="18">
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
+<div id="compilesOr.t,untyped,untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#compilesOr.t%2Cuntyped%2Cuntyped"><span class="Identifier">compilesOr</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/utility.nim#L22"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="public.t" class="tohide">
 <dt><pre><span class="Keyword">template</span> <a href="#public.t"><span class="Identifier">public</span></a><span class="Other">(</span><span class="Other">)</span> {.<span class="Identifier">pragma</span>.}</pre></dt>
 <dd>
@@ -287,7 +304,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-10 10:34:12 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-14 09:38:21 UTC</small>
       </div>
     </div>
   </div>
