--- a/autonat-dial-same-time/libp2p/connmanager.html
+++ b/autonat-dial-same-time/libp2p/connmanager.html
@@ -234,7 +234,7 @@ window.addEventListener("DOMContentLoaded", main2);
   muxed: Table[Connection, MuxerHolder]
   connEvents: array[ConnEventKind, OrderedSet[ConnEventHandler]]
   peerEvents: array[PeerEventKind, OrderedSet[PeerEventHandler]]
-  expectedConnections*: Table[(PeerId, Direction), Future[Connection]]
+  expectedConnectionsOverLimit*: Table[(PeerId, Direction), Future[Connection]]
   peerStore*: PeerStore">ConnManager</a></li>
   <li><a class="reference" href="#PeerEvent"
     title="PeerEvent = object
@@ -509,7 +509,7 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">muxed</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><a href="stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">,</span> <span class="Identifier">MuxerHolder</span><span class="Other">]</span>
   <span class="Identifier">connEvents</span><span class="Other">:</span> <span class="Identifier">array</span><span class="Other">[</span><span class="Identifier">ConnEventKind</span><span class="Other">,</span> <span class="Identifier">OrderedSet</span><span class="Other">[</span><a href="connmanager.html#ConnEventHandler"><span class="Identifier">ConnEventHandler</span></a><span class="Other">]</span><span class="Other">]</span>
   <span class="Identifier">peerEvents</span><span class="Other">:</span> <span class="Identifier">array</span><span class="Other">[</span><span class="Identifier">PeerEventKind</span><span class="Other">,</span> <span class="Identifier">OrderedSet</span><span class="Other">[</span><a href="connmanager.html#PeerEventHandler"><span class="Identifier">PeerEventHandler</span></a><span class="Other">]</span><span class="Other">]</span>
-  <span class="Identifier">expectedConnections</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><span class="Other">(</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">,</span> <a href="stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">)</span><span class="Other">,</span> <span class="Identifier">Future</span><span class="Other">[</span><a href="stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span><span class="Other">]</span>
+  <span class="Identifier">expectedConnectionsOverLimit</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><span class="Other">(</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">,</span> <a href="stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">)</span><span class="Other">,</span> <span class="Identifier">Future</span><span class="Other">[</span><a href="stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span><span class="Other">]</span>
   <span class="Identifier">peerStore</span><span class="Operator">*</span><span class="Other">:</span> <a href="peerstore.html#PeerStore"><span class="Identifier">PeerStore</span></a>
 </pre></dt>
 <dd>
@@ -992,7 +992,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-20 17:34:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-20 17:54:59 UTC</small>
       </div>
     </div>
   </div>
